fix 1px right margin gap in rightblocks in webkit only browsers.

--- a/public_html/layout/nouveau/style.css
+++ b/public_html/layout/nouveau/style.css
@@ -282,6 +282,11 @@ width:14.80em;
 height:1%;
 z-index:10;
 }
+/* webkit only browsers hack to hug right side*/
+body:nth-of-type(1) #gl_extra{
+  margin-left: -14.96em;
+}
+/*end webkit hack */
 #gl_footer {
 background:#000;
 clear:left;
